adaptiv without menu and modal

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
     />
     <!--css-->
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/media.css" />
 
     <title>WebStudio</title>
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="header-container container">
         <nav class="header-nav">
           <a class="logo" href="./index.html"
@@ -58,7 +59,7 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
       <!--hero section-->
       <section class="hero-section">
@@ -125,7 +126,7 @@
         </div>
       </section>
       <!--section Our Team-->
-      <section class="team-section">
+      <!-- <section class="team-section">
         <div class="team-container container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -299,9 +300,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--section Our Portfolio-->
-      <section class="portfolio-section">
+      <!-- <section class="portfolio-section">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -427,8 +428,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
+
     <footer class="footer">
       <div class="footer-container container">
         <div class="footer-box">
@@ -498,9 +500,9 @@
 
     <!--Modal-->
 
-    <div class="backdrop is-open" data-modal>
+    <div class="backdrop" data-modal>
       <!--<div class="backdrop is-open" data-modal></div>-->
-      <div class="modal">
+      <!-- <div class="modal">
         <button class="modal-close" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
@@ -579,7 +581,7 @@
           </div>
           <button class="modal-send">Send</button>
         </form>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
