--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="header-container container">
         <nav class="header-nav">
           <a class="logo" href="./index.html"
@@ -59,7 +59,7 @@
           </ul>
         </address>
       </div>
-    </header> -->
+    </header>
     <main>
       <!--hero section-->
       <section class="hero-section">
@@ -126,7 +126,7 @@
         </div>
       </section>
       <!--section Our Team-->
-      <!-- <section class="team-section">
+      <section class="team-section">
         <div class="team-container container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -300,9 +300,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--section Our Portfolio-->
-      <!-- <section class="portfolio-section">
+      <section class="portfolio-section">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -428,7 +428,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <footer class="footer">
