--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 
     <!--Mobile-menu-->
 
-    <div class="menu-container is-open">
+    <div class="menu-container">
       <button class="mobile-menu-btn">
         <svg href="./images/icons.svg#icon-close" class="mobile-menu-icon" width="8" height="8">
           <use></use>
