--- a/index.html
+++ b/index.html
@@ -316,7 +316,8 @@
             <li class="portfolio-li">
               <div class="portfolio-image">
                 <img
-                  src="./images/banking-app.jpg"
+                srcset="./images/bankingapp.jpg 1x, ./images/bankingapp@2x.jpg 2x"
+                  src="./images/bankingapp.jpg"
                   alt="Banking App"
                   width="360"
                   height="300"
@@ -336,7 +337,8 @@
             <li class="portfolio-li">
               <div class="portfolio-image">
                 <img
-                  src="./images/cashless-payment.jpg"
+                srcset="./images/cashlesspayment.jpg 1x, ./images/cashlesspayment@2x.jpg 2x"
+                  src="./images/cashlesspayment.jpg"
                   alt="Cashless Payment"
                   width="360"
                   height="300"
@@ -356,7 +358,8 @@
             <li class="portfolio-li">
               <div class="portfolio-image">
                 <img
-                  src="./images/meditation-app.jpg"
+                srcset="./images/meditationapp.jpg 1x, ./images/meditationapp@2x.jpg 2x"
+                  src="./images/meditationapp.jpg"
                   alt="Meditation App"
                   width="360"
                   height="300"
@@ -376,7 +379,8 @@
             <li class="portfolio-li">
               <div class="portfolio-image">
                 <img
-                  src="./images/taxi-service.jpg"
+                srcset="./images/taxiservice.jpg 1x, ./images/taxiservice@2x.jpg 2x"
+                  src="./images/taxiservice.jpg"
                   alt="Taxi Service"
                   width="360"
                   height="300"
@@ -396,7 +400,8 @@
             <li class="portfolio-li">
               <div class="portfolio-image">
                 <img
-                  src="./images/screen-illustrtions.jpg"
+                srcset="./images/screenillustrtions.jpg 1x, ./images/screenillustrtions@2x.jpg 2x"
+                  src="./images/screenillustrtions.jpg"
                   alt="Screen Illustrations"
                   width="360"
                   height="300"
@@ -416,7 +421,8 @@
             <li class="portfolio-li">
               <div class="portfolio-image">
                 <img
-                  src="./images/online-courses.jpg"
+                srcset="./images/onlinecourses.jpg 1x, ./images/onlinecourses@2x.jpg 2x"
+                  src="./images/onlinecourses.jpg"
                   alt="Online Courses"
                   width="360"
                   height="300"
@@ -442,7 +448,7 @@
       <div class="footer-container container">
         <div class="footer-box">
           <a class="footer-logo" href="/"
-            >Web<span class="accent-footer">Studio</span></a
+            >Web<span class="accentfooter">Studio</span></a
           >
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
