--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
 
 <!--Modal-->
 
-    <div class="backdrop is-open" data-modal>
+    <div class="backdrop " data-modal>
       <!--<div class="backdrop is-open" data-modal></div>-->
       <div class="modal">
         <button class="modal-close" type="button" data-modal-close>
